--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="addEventDialog">Add new Event</string>
     <string name="name_of_the_event">name of the event</string>
     <string name="event_add_toast">Event added</string>
+    <string name="edit_event_popup">Edit event</string>
+    <string name="delete_event_popup">Delete event</string>
 </resources>
