--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="event_add_toast">Event added</string>
     <string name="edit_event_popup">Edit event</string>
     <string name="delete_event_popup">Delete event</string>
+    <string name="fab_add_new">Add new participant</string>
+    <string name="fab_add_db">Add participant from DB</string>
 </resources>
