--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="delete_participant_popup">Delete participant</string>
     <string name="fab_add_new">Add new participant</string>
     <string name="fab_add_db">Add participant from DB</string>
+    <string name="edit_injury_popup">Edit Injury</string>
+    <string name="delete_injury_popup">Delete Injury</string>
 </resources>
