--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">First Aid Log</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
     <string name="addEventDialog">Add new Event</string>
@@ -13,7 +12,7 @@
     <string name="delete_participant_popup">Delete participant from this event</string>
     <string name="fab_add_new">Add new participant</string>
     <string name="fab_add_db">Add participant from DB</string>
-    <string name="edit_injury_popup">Edit Injury</string>
+    <string name="edit_injury_popup">Edit Incident</string>
     <string name="delete_injury_popup">Delete Injury</string>
     <string name="about_the_app">About the app</string>
     <string name="useful_tips">Useful tips</string>
@@ -61,4 +60,43 @@
     <string name="about_text">This app was developed as a diploma thesis on CULS (Czech University of Life Sciences Prague). Main purpose is to help volunteer medics on public events like summer camps to maintain medical recods more efficiently.</string>
     <string name="contact">Radim Bureš - radim.bures@gmail.com</string>
     <string name="rate">Rate FirstAidLog on Google Play</string>
+    <string name="tips1">tablets or suppositories for headache, teeth (analgesics)</string>
+    <string name="tips2">tablets or suppositories to reduce elevated temperature (antipyretics)</string>
+    <string name="tips3">anti-nausea tablets (vehicle antiemetics)</string>
+    <string name="tips4">charcoal</string>
+    <string name="tips5">nasal drops for nasal breathing (otorhinolaryngology)</string>
+    <string name="tips6">drops, solution (syrup) or cough tablets (antitussive, expectorant)</string>
+    <string name="tips7">mouthpiece for disinfection of oral cavity and pharyngeal pain (stomatology)</string>
+    <string name="tips8">ointment or healing accelerator such as burns (dexpanthenol spray)</string>
+    <string name="tips9">eye drops or eye ointment with disinfectant effect, eye water for eye flushing (ophthalmology)</string>
+    <string name="tips10">ointment or gel when insect bites (local antihistamines)</string>
+    <string name="tips11">tablets with systemic allergic reaction (total antihistamine)</string>
+    <string name="tips12">a product for skin disinfection and surface wounds</string>
+    <string name="tips13">disinfectant on the wound site</string>
+    <string name="tips14">inert ointment or greasex</string>
+    <string name="tips15">gauze hydrophilic folded sterile compression, various sizes</string>
+    <string name="tips16">patch on coil, different dimensions</string>
+    <string name="tips17">wound dressing, different sizes</string>
+    <string name="tips18">elastic bandage, various dimensions</string>
+    <string name="tips19">Bandage sterile, various sizes</string>
+    <string name="tips20">throttle bandage</string>
+    <string name="tips21">scarf triple</string>
+    <string name="tips22">cotton wool and cellulose wadding</string>
+    <string name="tips23">medical thermometer</string>
+    <string name="tips24">resuscitation strap</string>
+    <string name="tips25">anatomical tweezers</string>
+    <string name="tips26">surgical tweezers straight</string>
+    <string name="tips27">Medical wooden blades</string>
+    <string name="tips28">medical rubber gloves</string>
+    <string name="tips29">PVC stripper 45 x 55 cm</string>
+    <string name="tips30">fixation plates, various dimensions</string>
+    <string name="tips31">scissors</string>
+    <string name="tips32">closing pins, various sizes</string>
+    <string name="events">Events</string>
+    <string name="participant_db">Participants database</string>
+    <string name="list_participants">List of participants</string>
+    <string name="event_info">Event information</string>
+    <string name="incident_list">List of incidents</string>
+    <string name="personal_info">Personal information</string>
+    <string name="generate_pdf_report_using_export_button_bellow">Generate pdf report using export button bellow</string>
 </resources>
