--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -101,4 +101,5 @@
     <string name="personal_info">Účastník - souhrn</string>
     <string name="generate_pdf_report_using_export_button_bellow">PDF report vygenerujete kliknutím na tlačítko Export dole</string>
     <string name="no_particpants_in_db">Žádný účastník v databázi, nejdřív nějaké přidejte</string>
+    <string name="date_separator">-</string>
 </resources>
