--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,7 +100,7 @@
     <string name="personal_info">Personal information</string>
     <string name="generate_pdf_report_using_export_button_bellow">Generate pdf report using export button bellow</string>
     <string name="no_particpants_in_db">No participants in DB, add some first</string>
-    <string name="date_separator">&#160;-&#160;;</string>
+    <string name="date_separator">&#160;-&#160;</string>
     <string name="share_file">Share File</string>
     <string name="email_text">Hi, I\'m sending you medical report of your child in attachment.
         \n
@@ -110,7 +110,7 @@
         Event management</string>
     <string name="email_sub1">Medical report for&#160;</string>
     <string name="email_subject2">&#160;from event&#160;</string>
-    <string name="pdf_title">Medical Report for</string>
+    <string name="pdf_title">Medical Report for </string>
     <string name="personal_identification_number2">Personal identification number: %1$s</string>
     <string name="insurence_company2">Insurance company: %1$s</string>
     <string name="notes_optional2">Notes: %1$s</string>
