--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,4 +130,5 @@
     <string name="email_adress_of_medic2">Email address of medic: %1$s</string>
     <string name="phone_number_of_medic2">Phone number of medic: %1$s</string>
     <string name="number_of_partincipants">Number of participants: %1$s</string>
+    <string name="photos">Photos</string>
 </resources>
