--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -132,4 +132,5 @@
     <string name="phone_number_of_medic2">Číslo na zdravotníka akce: %1$s</string>
     <string name="number_of_partincipants">Počet účastníků: %1$s</string>
     <string name="photos">Fotky</string>
+    <string name="no_pdf_viewer">Není možné .pdf zobrazit. Nainstalujte si PDF prohlížeč z obchodu Google Play.</string>
 </resources>
