--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,4 +131,5 @@
     <string name="phone_number_of_medic2">Phone number of medic: %1$s</string>
     <string name="number_of_partincipants">Number of participants: %1$s</string>
     <string name="photos">Photos</string>
+    <string name="no_pdf_viewer">You cannot view .pdf file. Install PDF viewer from Play Store.</string>
 </resources>
