--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -133,4 +133,5 @@
     <string name="number_of_partincipants">Počet účastníků: %1$s</string>
     <string name="photos">Fotky</string>
     <string name="no_pdf_viewer">Není možné .pdf zobrazit. Nainstalujte si PDF prohlížeč z obchodu Google Play.</string>
+    <string name="icon_app">Ikona aplikace</string>
 </resources>
