--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -132,4 +132,5 @@
     <string name="number_of_partincipants">Number of participants: %1$s</string>
     <string name="photos">Photos</string>
     <string name="no_pdf_viewer">You cannot view .pdf file. Install PDF viewer from Play Store.</string>
+    <string name="icon_app">Icon app</string>
 </resources>
