--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,4 +133,7 @@
     <string name="photos">Photos</string>
     <string name="no_pdf_viewer">You cannot view .pdf file. Install PDF viewer from Play Store.</string>
     <string name="icon_app">Icon app</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
