--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -103,7 +103,7 @@
     <string name="no_particpants_in_db">Žádný účastník v databázi, nejdřív nějaké přidejte</string>
     <string name="date_separator">&#160;-&#160;</string>
     <string name="share_file">Sdílet soubor</string>
-    <string name="email_text">Dobrý den, v příloze zasílám pdf se záznamy ze zdravotního deníku vašeho dítěte.
+    <string name="email_text">Dobrý den, v příloze zasílám pdf se záznamy ze zdravotního deníku Vašeho dítěte.
         \n
         \n
         S pozdravem
@@ -134,4 +134,5 @@
     <string name="photos">Fotky</string>
     <string name="no_pdf_viewer">Není možné .pdf zobrazit. Nainstalujte si PDF prohlížeč z obchodu Google Play.</string>
     <string name="icon_app">Ikona aplikace</string>
+    <string name="image">Obrázek</string>
 </resources>
