--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -99,7 +99,7 @@
     <string name="event_info">Akce - souhrn</string>
     <string name="incident_list">Záznamy</string>
     <string name="personal_info">Účastník - souhrn</string>
-    <string name="generate_pdf_report_using_export_button_bellow">PDF report vygenerujete kliknutím na tlačítko Export dole</string>
+    <string name="generate_pdf_report_using_export_button_bellow">PDF report vygenerujete kliknutím na tlačítko Ukázat</string>
     <string name="no_particpants_in_db">Žádný účastník v databázi, nejdřív nějaké přidejte</string>
     <string name="date_separator">&#160;-&#160;</string>
     <string name="share_file">Sdílet soubor</string>
