--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,7 +98,7 @@
     <string name="event_info">Event information</string>
     <string name="incident_list">List of incidents</string>
     <string name="personal_info">Personal information</string>
-    <string name="generate_pdf_report_using_export_button_bellow">Generate pdf report using export button bellow</string>
+    <string name="generate_pdf_report_using_export_button_bellow">Generate pdf report using Show button</string>
     <string name="no_particpants_in_db">No participants in DB, add some first</string>
     <string name="date_separator">&#160;-&#160;</string>
     <string name="share_file">Share File</string>
